force-app/main/default/objects/idbx_Idea__c/idbx_Idea__c.object-meta.xml
<CustomObject>
    <label>Idea</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Idea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>