force-app/main/default/objects/idbx_Idea__c/fields/idbx_Category__c.field-meta.xml
<CustomField>
    <fullName>idbx_Category__c</fullName>
    <description>Identifies the category of the idea using the Front Office Application Category List.</description>
    <inlineHelpText>Identifies the category of the idea using the Front Office Application Category List.</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
                <default>true</default>
                <label>Others</label>
            </value>
            <value>
                <fullName>Bamboo</fullName>
            </value>
            <value>
                <fullName>Confluence</fullName>
            </value>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>