force-app/main/default/objects/idbx_Idea__c/fields/idbx_Description__c.field-meta.xml
<CustomField>
    <fullName>idbx_Description__c</fullName>
    <description>Detailed information about the Idea.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Detailed information about the Idea.</inlineHelpText>
    <label>Description</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>