force-app/main/default/objects/idbx_Idea__c/fields/idbx_Idea_Points__c.field-meta.xml
<CustomField>
    <fullName>idbx_Idea_Points__c</fullName>
    <description>Displays the total accumulated points for this idea based on related votes.</description>
    <inlineHelpText>Displays the total accumulated points for this idea based on related votes.</inlineHelpText>
    <label>Idea Points</label>
    <summarizedField>idbx_Vote__c.idbx_Vote_Points__c</summarizedField>
    <summaryForeignKey>idbx_Vote__c.idbx_Idea__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>