force-app/main/default/objects/idbx_Idea__c/fields/idbx_Status__c.field-meta.xml
<CustomField>
    <fullName>idbx_Status__c</fullName>
    <description>Identifies the status of the idea.</description>
    <inlineHelpText>Identifies the status of the idea.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>