force-app/main/default/objects/idbx_Idea__c/fields/IdeaBox_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>IdeaBox_Scorecard__c</fullName>
    <description>Links each Idea to a specific IdeaBox Scorecard to enable roll-up of total user points.</description>
    <inlineHelpText>Links each Idea to a specific IdeaBox Scorecard to enable roll-up of total user points.</inlineHelpText>
    <label>IdeaBox Scorecard</label>
    <referenceTo>idbx_IdeaBox_Scorecard__c</referenceTo>
    <relationshipLabel>Ideas</relationshipLabel>
    <relationshipName>Ideas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>