force-app/main/default/objects/idbx_Idea__c/validationRules/idbx_Description_Min_Length_20_Chars.validationRule-meta.xml
<ValidationRule>
    <fullName>idbx_Description_Min_Length_20_Chars</fullName>
    <active>true</active>
    <description>The Description must be at least 20 characters long for the every submission.</description>
    <errorConditionFormula>LEN(idbx_Description__c)&lt;20</errorConditionFormula>
    <errorDisplayField>idbx_Description__c</errorDisplayField>
    <errorMessage>The Description must be at least 20 characters long</errorMessage>
</ValidationRule>