force-app/main/default/objects/idbx_Idea__c/validationRules/idbx_Title_Min_Length_10_Chars.validationRule-meta.xml
<ValidationRule>
    <fullName>idbx_Title_Min_Length_10_Chars</fullName>
    <active>true</active>
    <description>The Description must be at least 20 characters long for the every submission.</description>
    <errorConditionFormula>LEN(Name) &lt; 10</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The Title must be at least 10 characters long.</errorMessage>
</ValidationRule>